# fiap-Deep-Learning-and-unstructured-data

./: .gitignore  README.md  dados_gerados_por_humanos.ipynb  dados_gerados_por_humanos_aula_2.ipynb  dados_gerados_por_humanos_aula_3.ipynb  dados_gerados_por_humanos_aula_4.ipynb  dados_gerados_por_humanos_aula_5.ipynb  deep_reinforcement_learning.ipynb  deep_reinforcement_learning_multilayer_perceptron.ipynb  deep_reinforcement_learning_rede_neural_recorrente_simple_RNN_LSTM.ipynb  deep_reinforcement_learning_redes_adversárias_generativas_GANs.ipynb  deep_reinforcement_learning_redes_neurais_convolucionais_transfer_learning.ipynb  deep_reinforcement_learning_redes_self_organizing _maps_SOM.ipynb  environment.yml  pyproject.toml
